--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-icons": "^5.4.0",
     "react-router-dom": "^7.2.0",
     "react-slick": "^0.30.3",
+    "react-transition-group": "^4.4.5",
     "slick-carousel": "^1.8.1",
     "swiper": "^11.2.4",
     "tailwindcss": "^4.0.6"
