--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "aos": "^2.3.4",
     "browser-router": "^0.2.0",
     "framer-motion": "^12.4.3",
+    "leaflet": "^1.9.4",
     "lucide-react": "^0.475.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.4.0",
+    "react-leaflet": "^5.0.0",
     "react-router-dom": "^7.2.0",
     "react-slick": "^0.30.3",
     "react-transition-group": "^4.4.5",
