--- a/package.json
+++ b/package.json
@@ -17,12 +17,17 @@
     "leaflet": "^1.9.4",
     "lucide-react": "^0.475.0",
     "react": "^19.0.0",
+    "react-calendar": "^5.1.0",
+    "react-countup": "^6.5.3",
     "react-dom": "^19.0.0",
+    "react-hot-toast": "^2.5.2",
     "react-icons": "^5.4.0",
     "react-leaflet": "^5.0.0",
     "react-router-dom": "^7.2.0",
     "react-slick": "^0.30.3",
+    "react-toastify": "^11.0.5",
     "react-transition-group": "^4.4.5",
+    "recharts": "^2.15.1",
     "slick-carousel": "^1.8.1",
     "swiper": "^11.2.4",
     "tailwindcss": "^4.0.6"
