--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.0.6",
     "aos": "^2.3.4",
+    "axios": "^1.8.1",
     "browser-router": "^0.2.0",
     "framer-motion": "^12.4.3",
     "leaflet": "^1.9.4",
