--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "proxy": "http://192.168.29.50:3000"
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.0.6",
