--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "aos": "^2.3.4",
     "axios": "^1.8.1",
     "browser-router": "^0.2.0",
+    "dotenv": "^16.4.7",
     "framer-motion": "^12.4.3",
     "jwt-decode": "^4.0.0",
     "leaflet": "^1.9.4",
