--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
+   "start": "vite preview --outDir dist",
     "lint": "eslint .",
     "preview": "vite preview",
     "proxy": "http://192.168.29.50:3000"
