--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
   "type": "module",
  
   "scripts": {
-    "dev": "vite",
     "build": "vite build",
+  "preview": "vite preview",
+  "start": "vite preview",
     "lint": "eslint .",
-    "preview": "vite preview",
     "proxy": "http://192.168.29.50:3000"
   },
   "dependencies": {
