--- a/package.json
+++ b/package.json
@@ -35,14 +35,15 @@
     "react-transition-group": "^4.4.5",
     "recharts": "^2.15.1",
     "slick-carousel": "^1.8.1",
-    "swiper": "^11.2.4",
-    "tailwindcss": "^4.0.6"
+    "swiper": "^11.2.4"
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
+    "@tailwindcss/postcss": "^4.0.12",
     "@types/react": "^19.0.8",
     "@types/react-dom": "^19.0.3",
     "@vitejs/plugin-react": "^4.3.4",
+    "autoprefixer": "^10.4.21",
     "eslint": "^9.19.0",
     "eslint-plugin-react": "^7.37.4",
     "eslint-plugin-react-hooks": "^5.0.0",
@@ -51,6 +52,8 @@
     "imagemin": "^9.0.1",
     "imagemin-mozjpeg": "^10.0.0",
     "imagemin-pngquant": "^10.0.0",
+    "postcss": "^8.5.3",
+    "tailwindcss": "^4.0.12",
     "vite": "^6.1.0"
   }
 }
