--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "proxy": "http://192.168.29.50:3000"
+     "proxy": "http://192.168.29.50:3000",
+    "optimize-images": "imagemin dist/assets/* --out-dir=dist/assets"
   },
   "dependencies": {
     "@react-three/drei": "^10.0.4",
