--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@react-three/drei": "^10.0.4",
     "@react-three/fiber": "^9.0.4",
+    "@supabase/supabase-js": "^2.49.1",
     "@tailwindcss/vite": "^4.0.6",
     "aos": "^2.3.4",
     "axios": "^1.8.1",
