--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "react-transition-group": "^4.4.5",
     "recharts": "^2.15.1",
     "slick-carousel": "^1.8.1",
-    "swiper": "^11.2.4"
+    "swiper": "^11.2.4",
+    "three": "^0.174.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
@@ -56,6 +57,6 @@
     "imagemin-pngquant": "^10.0.0",
     "postcss": "^8.5.3",
     "tailwindcss": "^4.0.12",
-    "vite": "^6.1.0"
+    "vite": "^6.2.2"
   }
 }
