--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "react-transition-group": "^4.4.5",
     "recharts": "^2.15.1",
     "slick-carousel": "^1.8.1",
-    "swiper": "^11.2.4"
+    "swiper": "^11.2.4",
+    "three": "^0.174.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
