--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "@supabase/supabase-js": "^2.49.1",
     "@tailwindcss/vite": "^4.0.6",
     "aos": "^2.3.4",
-    "axios": "^1.8.1",
+    "axios": "^1.8.4",
     "browser-router": "^0.2.0",
     "framer-motion": "^12.4.3",
     "leaflet": "^1.9.4",
@@ -36,6 +36,7 @@
     "react-transition-group": "^4.4.5",
     "recharts": "^2.15.1",
     "slick-carousel": "^1.8.1",
+    "socket.io-client": "^4.8.1",
     "swiper": "^11.2.4",
     "three": "^0.174.0"
   },
