--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
-VITE_API_URL=https://api.digisky.ai
+VITE_API_URL=http://localhost:5000
 
 REACT_APP_NAME= Digisky
+
+RAZORPAY_KEY_ID=rzp_live_h6b1as39IzBNpZ
