--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-transition-group": "^4.4.5",
     "recharts": "^2.15.1",
     "slick-carousel": "^1.8.1",
+    "socket": "^0.15.15",
     "socket.io-client": "^4.8.1",
     "swiper": "^11.2.4",
     "three": "^0.174.0"
