--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "aos": "^2.3.4",
     "axios": "^1.8.4",
     "browser-router": "^0.2.0",
+    "firebase": "^11.8.1",
     "framer-motion": "^12.4.3",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.475.0",
