changed live production url

--- a/.env.production
+++ b/.env.production
@@ -1,4 +1,5 @@
-VITE_API_URL=https://api.digisky.ai
+# VITE_API_URL=https://api.digisky.ai
+VITE_API_URL=https://digiskyai-backend.onrender.com
 
 REACT_APP_NAME= Digisky
 
