--- a/package.json
+++ b/package.json
@@ -13,15 +13,15 @@
     "optimize-images": "imagemin dist/assets/* --out-dir=dist/assets"
   },
   "dependencies": {
-    "@react-three/drei": "^10.0.4",
-    "@react-three/fiber": "^9.0.4",
+    "@react-three/drei": "^10.1.2",
+    "@react-three/fiber": "^9.1.2",
     "@supabase/supabase-js": "^2.49.1",
     "@tailwindcss/vite": "^4.0.6",
     "aos": "^2.3.4",
     "axios": "^1.8.4",
     "browser-router": "^0.2.0",
     "firebase": "^11.8.1",
-    "framer-motion": "^12.4.3",
+    "framer-motion": "^12.16.0",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.475.0",
     "react": "^19.0.0",
@@ -30,8 +30,10 @@
     "react-dom": "^19.0.0",
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.4.0",
+    "react-intersection-observer": "^9.16.0",
     "react-leaflet": "^5.0.0",
     "react-router-dom": "^7.3.0",
+    "react-simple-typewriter": "^5.0.1",
     "react-slick": "^0.30.3",
     "react-toastify": "^11.0.5",
     "react-transition-group": "^4.4.5",
