--- a/package.json
+++ b/package.json
@@ -42,7 +42,8 @@
     "socket": "^0.15.15",
     "socket.io-client": "^4.8.1",
     "swiper": "^11.2.4",
-    "three": "^0.174.0"
+    "three": "^0.174.0",
+    "typewriter-effect": "^2.22.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
