--- a/package.json
+++ b/package.json
@@ -20,9 +20,12 @@
     "aos": "^2.3.4",
     "axios": "^1.8.4",
     "browser-router": "^0.2.0",
+    "classnames": "^2.5.1",
+    "country-list": "^2.3.0",
     "firebase": "^11.8.1",
     "framer-motion": "^12.16.0",
     "leaflet": "^1.9.4",
+    "libphonenumber-js": "^1.12.9",
     "lucide-react": "^0.475.0",
     "react": "^19.0.0",
     "react-calendar": "^5.1.0",
@@ -32,7 +35,9 @@
     "react-icons": "^5.4.0",
     "react-intersection-observer": "^9.16.0",
     "react-leaflet": "^5.0.0",
+    "react-phone-input-2": "^2.15.1",
     "react-router-dom": "^7.3.0",
+    "react-select": "^5.10.1",
     "react-simple-typewriter": "^5.0.1",
     "react-slick": "^0.30.3",
     "react-toastify": "^11.0.5",
